--- a/Webscraping-checkpoint.ipynb
+++ b/Webscraping-checkpoint.ipynb
@@ -40,14 +40,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 195,
    "id": "55d6b573",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import json \n",
-    "import pandas as pd "
+    "import pandas as pd \n",
+    "import datetime "
    ]
   },
   {
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 196,
    "id": "4dad6465",
    "metadata": {},
    "outputs": [],
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 197,
    "id": "66a7c67c",
    "metadata": {},
    "outputs": [],
@@ -101,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 198,
    "id": "6a025243",
    "metadata": {},
    "outputs": [
@@ -187,7 +188,7 @@
        "4         1610    MIGUEL    ST. PIERRE AND MIQUELON                11     None"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 199,
    "id": "0c2c15ea",
    "metadata": {},
    "outputs": [
@@ -236,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 200,
    "id": "09bc946b",
    "metadata": {},
    "outputs": [
@@ -246,7 +247,7 @@
        "'[{\"countryCode\":1,\"countryName\":\"EUROPEAN\",\"countryDescription\":\"EUROPEAN UNION - 27           \",\"regionId\":1,\"gencCode\":null},{\"countryCode\":2,\"countryName\":\"UNKNOWN\",\"countryDescription\":\"UNKNOWN\",\"regionId\":99,\"gencCode\":\"AX1\"},{\"countryCode\":1010,\"countryName\":\"GREENLD \",\"countryDescription\":\"GREENLAND                      \",\"regionId\":11,\"gencCode\":\"GRL\"},{\"countryCode\":1220,\"countryName\":\"CANADA  \",\"countryDescription\":\"CANADA                         \",\"regionId\":11,\"gencCode\":\"CAN\"},{\"countryCode\":1610,\"countryName\":\"MIGUEL  \",\"countryDescription\":\"ST. PIERRE AND MIQUELON        \",\"regionId\":11,\"gencCode\":null},{\"countryCode\":2010,\"countryName\":\"MEXICO  \",\"countryDescription\":\"MEXICO                         \",\"regionId\":11,\"gencCode\":\"MEX\"},{\"countryCode\":2050,\"countryName\":\"GUATMAL \",\"countryDescription\":\"GUATEMALA                      \",\"regionId\":11,\"gencCode\":\"GTM\"},{\"countryC'"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 201,
    "id": "2144bf5c",
    "metadata": {},
    "outputs": [],
@@ -289,49 +290,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 202,
    "id": "b2c0ca80",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "127    5700\n",
-       "Name: countryCode, dtype: int64"
+       "5700"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Pegando o country_code de China \n",
-    "china_countrycode = df_countries[df_countries['countryName'] == 'CHINA']['countryCode']\n",
+    "china_countrycode = df_countries[df_countries['countryName'] == 'CHINA']['countryCode'].iloc[0]\n",
     "china_countrycode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 203,
    "id": "d09ea023",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5    2010\n",
-       "Name: countryCode, dtype: int64"
+       "2010"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Pegando o country_code de Mexico \n",
-    "mexico_countrycode = df_countries[df_countries['countryName'] == 'MEXICO']['countryCode']\n",
+    "mexico_countrycode = df_countries[df_countries['countryName'] == 'MEXICO']['countryCode'].iloc[0]\n",
     "mexico_countrycode"
    ]
   },
@@ -345,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5f8ac87",
+   "id": "093a0f99",
    "metadata": {},
    "source": [
     "# Data frame "
@@ -353,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 204,
    "id": "9fe4af91",
    "metadata": {},
    "outputs": [
@@ -427,7 +426,7 @@
        "4            105  Wheat - Durum       1"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 205,
    "id": "cd7f94e7",
    "metadata": {},
    "outputs": [
@@ -474,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 206,
    "id": "d0ec1c4d",
    "metadata": {},
    "outputs": [
@@ -484,7 +483,7 @@
        "'[{\"commodityCode\":101,\"commodityName\":\"Wheat - HRW\",\"unitId\":1},{\"commodityCode\":102,\"commodityName\":\"Wheat - SRW\",\"unitId\":1},{\"commodityCode\":103,\"commodityName\":\"Wheat - HRS\",\"unitId\":1},{\"commodityCode\":104,\"commodityName\":\"Wheat - White\",\"unitId\":1},{\"commodityCode\":105,\"commodityName\":\"Wheat - Durum\",\"unitId\":1},{\"commodityCode\":106,\"commodityName\":\"Wheat - Mixed\",\"unitId\":1},{\"commodityCode\":107,\"commodityName\":\"All Wheat\",\"unitId\":1},{\"commodityCode\":201,\"commodityName\":\"Wheat Products\",\"unitId\":1},{\"commodityCode\":301,\"commodityName\":\"Barley\",\"unitId\":1},{\"commodityCode\":401,\"commodityName\":\"Corn\",\"unitId\":1},{\"commodityCode\":501,\"commodityName\":\"Rye\",\"unitId\":1},{\"commodityCode\":601,\"commodityName\":\"Oats\",\"unitId\":1},{\"commodityCode\":701,\"commodityName\":\"Sorghum\",\"unitId\":1},{\"commodityCode\":801,\"commodityName\":\"Soybeans\",\"unitId\":1},{\"commodityCode\":901,\"commodityName\":\"Soybea'"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,25 +502,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 207,
    "id": "579ec409",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13    801\n",
-       "Name: commodityCode, dtype: int64"
+       "801"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Como aparentemente, parece tudo ok com os dados acima, logo podemos coletar diretamente sem limpar os dados\n",
-    "soybeans_commoditycode = df_commodities[df_commodities['commodityName'] == 'Soybeans']['commodityCode']\n",
+    "soybeans_commoditycode = df_commodities[df_commodities['commodityName'] == 'Soybeans']['commodityCode'].iloc[0]\n",
     "soybeans_commoditycode "
    ]
   },
@@ -535,133 +533,67 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63a9d010",
+   "id": "c45c800d",
    "metadata": {},
    "source": [
-    "#      Parâmetros necessários \n"
+    "# Variáveis "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "id": "b9dbba57",
+   "execution_count": 214,
+   "id": "c05187a8",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definindo o ano atual \n",
+    "year = (datetime.date.today()).year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "id": "3cff653a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url_china = \"https://apps.fas.usda.gov/OpenData/api/esr/exports/commodityCode/\" + str(soybeans_commoditycode) + \"/countryCode/\" + str(china_countrycode) +\"/marketYear/\" + str(year)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "id": "76cbf448",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url_mexico = \"https://apps.fas.usda.gov/OpenData/api/esr/exports/commodityCode/\" + str(soybeans_commoditycode) + \"/countryCode/\" + str(mexico_countrycode) +\"/marketYear/\" + str(year)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "id": "e8bcf016",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "O código da soja é\n"
+      "https://apps.fas.usda.gov/OpenData/api/esr/exports/commodityCode/801/countryCode/5700/marketYear/2022\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "13    801\n",
-       "Name: commodityCode, dtype: int64"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(\"O código da soja é\")\n",
-    "soybeans_commoditycode"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "id": "71030615",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "O código da China é\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "127    5700\n",
-       "Name: countryCode, dtype: int64"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(\"O código da China é\")\n",
-    "china_countrycode"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "id": "b7698b0a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "O código do México é\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "5    2010\n",
-       "Name: countryCode, dtype: int64"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(\"O código do México é\")\n",
-    "mexico_countrycode"
+    "link_tratado = (\"https://apps.fas.usda.gov/OpenData/api/esr/exports/commodityCode/\" +str(china_countrycode))\n",
+    "print(url_china)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "de3a08f0",
-   "metadata": {},
-   "source": [
-    "# Links com os parâmetros acima "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "id": "29e159d2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url_china = f\"https://apps.fas.usda.gov/OpenData/api/esr/exports/commodityCode/801/countryCode/5700/marketYear/2022\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "id": "9be673d3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url_mexico = f\"https://apps.fas.usda.gov/OpenData/api/esr/exports/commodityCode/801/countryCode/2010/marketYear/2022\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e9eee92c",
+   "id": "9d2bbd2e",
    "metadata": {},
    "source": [
     "# Requests "
@@ -669,8 +601,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "id": "3b7f4246",
+   "execution_count": 218,
+   "id": "bed84323",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 219,
    "id": "1feadaeb",
    "metadata": {},
    "outputs": [
@@ -933,7 +865,7 @@
        "9  2021-11-04T00:00:00  "
       ]
      },
-     "execution_count": 108,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +877,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d60ab05",
+   "id": "f1d0d32b",
    "metadata": {},
    "source": [
     "# Data Frame - Exportações para o México"
@@ -953,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 220,
    "id": "ed2f5065",
    "metadata": {},
    "outputs": [
@@ -1197,7 +1129,7 @@
        "9  2021-11-04T00:00:00  "
       ]
      },
-     "execution_count": 109,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
