--- a/Webscraping-checkpoint.ipynb
+++ b/Webscraping-checkpoint.ipynb
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8e093dd",
+   "id": "6ee51d7f",
    "metadata": {},
    "source": [
     "# Data frame "
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a04c37f",
+   "id": "9dc403d3",
    "metadata": {},
    "source": [
     "# Variáveis "
@@ -542,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "322ac54a",
+   "id": "4cd7b8fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": 215,
-   "id": "01ecbeb1",
+   "id": "def905f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "8a17879c",
+   "id": "a980355d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "a035b7a8",
+   "id": "12a17b7f",
    "metadata": {
     "scrolled": true
    },
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b658abd",
+   "id": "a4728865",
    "metadata": {},
    "source": [
     "# Requests "
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "06aacbfb",
+   "id": "8f66a128",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20dfbcb7",
+   "id": "120ae20d",
    "metadata": {},
    "source": [
     "# Data Frame - Exportações para o México"
@@ -1958,7 +1958,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e997816a",
+   "id": "83506700",
    "metadata": {},
    "source": [
     "# Exportando para csv "
@@ -1971,7 +1971,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_china.to_csv (r'C:\\Users\\guima\\.ipynb_checkpoints\\export_df_china.csv', index = False, header=True)"
+    "#df_china.to_csv (r'C:\\Users\\guima\\.ipynb_checkpoints\\export_df_china.csv', index = False, header=True)"
    ]
   },
   {
@@ -1981,7 +1981,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_mexico.to_csv (r'C:\\Users\\guima\\.ipynb_checkpoints\\export_df_mexico.csv', index = False, header=True)"
+    "#df_mexico.to_csv (r'C:\\Users\\guima\\.ipynb_checkpoints\\export_df_mexico.csv', index = False, header=True)"
    ]
   },
   {
