--- a/Webscraping-checkpoint.ipynb
+++ b/Webscraping-checkpoint.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 249,
    "id": "55d6b573",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 250,
    "id": "4dad6465",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 251,
    "id": "66a7c67c",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 252,
    "id": "6a025243",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
        "4         1610    MIGUEL    ST. PIERRE AND MIQUELON                11     None"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 252,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 253,
    "id": "0c2c15ea",
    "metadata": {},
    "outputs": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 254,
    "id": "09bc946b",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
        "'[{\"countryCode\":1,\"countryName\":\"EUROPEAN\",\"countryDescription\":\"EUROPEAN UNION - 27           \",\"regionId\":1,\"gencCode\":null},{\"countryCode\":2,\"countryName\":\"UNKNOWN\",\"countryDescription\":\"UNKNOWN\",\"regionId\":99,\"gencCode\":\"AX1\"},{\"countryCode\":1010,\"countryName\":\"GREENLD \",\"countryDescription\":\"GREENLAND                      \",\"regionId\":11,\"gencCode\":\"GRL\"},{\"countryCode\":1220,\"countryName\":\"CANADA  \",\"countryDescription\":\"CANADA                         \",\"regionId\":11,\"gencCode\":\"CAN\"},{\"countryCode\":1610,\"countryName\":\"MIGUEL  \",\"countryDescription\":\"ST. PIERRE AND MIQUELON        \",\"regionId\":11,\"gencCode\":null},{\"countryCode\":2010,\"countryName\":\"MEXICO  \",\"countryDescription\":\"MEXICO                         \",\"regionId\":11,\"gencCode\":\"MEX\"},{\"countryCode\":2050,\"countryName\":\"GUATMAL \",\"countryDescription\":\"GUATEMALA                      \",\"regionId\":11,\"gencCode\":\"GTM\"},{\"countryC'"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 254,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 255,
    "id": "2144bf5c",
    "metadata": {},
    "outputs": [],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 256,
    "id": "b2c0ca80",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
        "5700"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 256,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 257,
    "id": "d09ea023",
    "metadata": {},
    "outputs": [
@@ -323,7 +323,7 @@
        "2010"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 257,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ee51d7f",
+   "id": "d899b440",
    "metadata": {},
    "source": [
     "# Data frame "
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 258,
    "id": "9fe4af91",
    "metadata": {},
    "outputs": [
@@ -426,7 +426,7 @@
        "4            105  Wheat - Durum       1"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 259,
    "id": "cd7f94e7",
    "metadata": {},
    "outputs": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 260,
    "id": "d0ec1c4d",
    "metadata": {},
    "outputs": [
@@ -483,7 +483,7 @@
        "'[{\"commodityCode\":101,\"commodityName\":\"Wheat - HRW\",\"unitId\":1},{\"commodityCode\":102,\"commodityName\":\"Wheat - SRW\",\"unitId\":1},{\"commodityCode\":103,\"commodityName\":\"Wheat - HRS\",\"unitId\":1},{\"commodityCode\":104,\"commodityName\":\"Wheat - White\",\"unitId\":1},{\"commodityCode\":105,\"commodityName\":\"Wheat - Durum\",\"unitId\":1},{\"commodityCode\":106,\"commodityName\":\"Wheat - Mixed\",\"unitId\":1},{\"commodityCode\":107,\"commodityName\":\"All Wheat\",\"unitId\":1},{\"commodityCode\":201,\"commodityName\":\"Wheat Products\",\"unitId\":1},{\"commodityCode\":301,\"commodityName\":\"Barley\",\"unitId\":1},{\"commodityCode\":401,\"commodityName\":\"Corn\",\"unitId\":1},{\"commodityCode\":501,\"commodityName\":\"Rye\",\"unitId\":1},{\"commodityCode\":601,\"commodityName\":\"Oats\",\"unitId\":1},{\"commodityCode\":701,\"commodityName\":\"Sorghum\",\"unitId\":1},{\"commodityCode\":801,\"commodityName\":\"Soybeans\",\"unitId\":1},{\"commodityCode\":901,\"commodityName\":\"Soybea'"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 260,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 261,
    "id": "579ec409",
    "metadata": {},
    "outputs": [
@@ -512,7 +512,7 @@
        "801"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 261,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dc403d3",
+   "id": "4b4b8417",
    "metadata": {},
    "source": [
     "# Variáveis "
@@ -541,8 +541,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
-   "id": "4cd7b8fa",
+   "execution_count": 262,
+   "id": "0892be41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,8 +552,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
-   "id": "def905f2",
+   "execution_count": 263,
+   "id": "09972b40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,8 +562,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
-   "id": "a980355d",
+   "execution_count": 264,
+   "id": "a65029f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,8 +572,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
-   "id": "12a17b7f",
+   "execution_count": 265,
+   "id": "8d4c793a",
    "metadata": {
     "scrolled": true
    },
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4728865",
+   "id": "88e2b1d9",
    "metadata": {},
    "source": [
     "# Requests "
@@ -601,8 +601,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
-   "id": "8f66a128",
+   "execution_count": 266,
+   "id": "dfbd0dba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 267,
    "id": "1feadaeb",
    "metadata": {},
    "outputs": [
@@ -865,19 +865,19 @@
        "9  2021-11-04T00:00:00  "
       ]
      },
-     "execution_count": 222,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_china = pd.read_json(data_china.text)\n",
-    "df_china.head(10)"
+    "df_china.head()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "120ae20d",
+   "id": "649a7be2",
    "metadata": {},
    "source": [
     "# Data Frame - Exportações para o México"
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 268,
    "id": "ed2f5065",
    "metadata": {},
    "outputs": [
@@ -1946,19 +1946,19 @@
        "52  2022-09-01T00:00:00  "
       ]
      },
-     "execution_count": 223,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_mexico =  pd.read_json(data_mexico.text)\n",
-    "df_mexico.head(100)"
+    "df_mexico.head()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "83506700",
+   "id": "c15ba577",
    "metadata": {},
    "source": [
     "# Exportando para csv "
@@ -1966,22 +1966,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 269,
    "id": "a1641330",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df_china.to_csv (r'C:\\Users\\guima\\.ipynb_checkpoints\\export_df_china.csv', index = False, header=True)"
+    "df_china.to_csv (r'C:\\Users\\guima\\.ipynb_checkpoints\\export_df_china.csv', index = False, header=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 270,
    "id": "bc97255f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df_mexico.to_csv (r'C:\\Users\\guima\\.ipynb_checkpoints\\export_df_mexico.csv', index = False, header=True)"
+    "df_mexico.to_csv (r'C:\\Users\\guima\\.ipynb_checkpoints\\export_df_mexico.csv', index = False, header=True)"
    ]
   },
   {
